Query id and type
