# api/swagger.yaml
@@ -1,8 +1,21 @@
 ---
 swagger: "2.0"
 info:
-  description: "A sample API that uses a petstore as an example to demonstrate features\
-    \ in the swagger-2.0 specification"
+  description: >-
+    <div class="postman-run-button"
+    data-postman-action="collection/import"
+    data-postman-var-1="c3d1fba63cf14cdfeb06"></div>
+        <script type="text/javascript">
+          (function (p, o, s, t, m, a, n) {
+            !p[s] && (p[s] = function () {
+              (p[t] || (p[t] = [])).push(arguments);
+            });
+            !o.getElementById(s + t) && o.getElementsByTagName("head")[0].appendChild((
+              (n = o.createElement("script")),
+              (n.id = s + t), (n.async = 1), (n.src = m), n
+            ));
+          }(window, document, "_pm", "PostmanRunObject", "https://run.pstmn.io/button.js"));
+        </script>
   version: "1.0.0"
   title: "Swagger renders"
   termsOfService: "http://helloreverb.com/terms/"
@@ -13,10 +26,10 @@ info:
   license:
     name: "MIT"
     url: "http://opensource.org/licenses/MIT"
-host: "api-renders.herokuapp.com"
+host: "localhost:8080"
 basePath: "/api/v1"
 schemes:
-- "https"
+- "http"
 consumes:
 - "application/json"
 produces:
@@ -28,7 +41,17 @@ paths:
       - "render"
       description: "Returns all renders"
       operationId: "getRenders"
-      parameters: []
+      parameters: 
+      - name: "id"
+        in: "query"
+        description: "Id of an existing render"
+        required: false
+        type: "string"        
+      - name: "type"
+        in: "query"
+        description: "Type of an existing render"
+        required: false
+        type: "string"
       responses:
         200:
           description: "Render response"
@@ -66,32 +89,8 @@ paths:
           description: "Unprocessable Entity"
         500:
           description: "Internal Server Error"
-      x-swagger-router-controller: "Render" 
+      x-swagger-router-controller: "Render"  
   /renders/{id}:
-    get:
-      tags:
-      - "render"
-      description: "Return an existing render"
-      operationId: "getRender"
-      parameters:
-      - name: "id"
-        in: "path"
-        description: "Id of an existing render"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "Render response"
-          schema:
-            type: "array"
-            title: "Renders"
-            items:
-              $ref: "#/definitions/Render"
-        404:
-          description: "Not found"
-        500:
-          description: "Database error"
-      x-swagger-router-controller: "Render"    
     delete:
       tags:
       - "render"
@@ -110,7 +109,7 @@ paths:
           description: "Bad request"
         404:
           description: "Not found"
-      x-swagger-router-controller: "Render"                
+      x-swagger-router-controller: "Render"                     
 definitions:
   Render:
     type: "object"
